# Modelica-Arduino

./: .gitignore
Arduino/Components/: DFLG6DOF.mo
Arduino/Internal/: buildSketchOM.mo
Arduino/Resources/Source/Arduino/: Arduino.h  CMakeLists.txt  ModelicaArduino.cpp  Print.cpp  SoftArduino.h
Arduino/Resources/Source/Firmata/: CMakeLists.txt  FirmataConnection.cpp
